# proj-struct-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp  platform.h  platform_unix.cpp  platform_win.cpp  proj-struct.cpp  proj-struct.h  proj-struct_tests.cpp
